--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,8 @@ jobs:
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
+        # Pytest latest version was causing errors - so downgraded
+        pip install pytest==3.0
 #    - name: Lint with flake8
 #       run: |
 #         # stop the build if there are Python syntax errors or undefined names
